Fix more flex/alignment issues

--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@
 }
 
 /* header */
+.header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
 ul {
     list-style: none;
     display: flex;
@@ -31,16 +36,18 @@ ul {
 }
 
 /* hero */
+.hero {
+    padding-top: 64px;
+    padding-bottom: 64px;
+    gap: 16px;
+}
+
 .hero > .left {
     flex: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-}
-
-.hero > .left > .caption {
-    text-align: start;
 }
 
 .right {
@@ -52,6 +59,10 @@ ul {
 }
 
 /* info */
+.info > .title {
+    padding-bottom: 32px;
+}
+
 .info {
     flex-direction: column;
 }
@@ -80,13 +91,15 @@ ul {
     align-items: center;
 }
 
-.caption {
+.item > .caption {
     width: 160px;
     text-align: center;
 }
 
 /* quote */
 .quote {
+    padding-top: 64px;
+    padding-bottom: 64px;
     flex-direction: column;
 }
 
@@ -101,5 +114,7 @@ ul {
 
 /* footer */
 .footer {
+    padding-top: 16px;
+    padding-bottom: 16px;
     justify-content: center;
 }
